Ensure sistersitebox is right-aligned in mobile style
Former-commit-id: d3b68ee8eb543aa16677445b56ed881761836f01 [formerly 80589ccc2f33c987e82d52ca1c64ee3a6a155ebd] [formerly febf94329b12c24df608d1e2bee71ca066e1358c] [formerly 00f3d539358b4c3fa8995f2522ab2f7006eb9ff8 [formerly acd1924d3b46c11d30d2fc0c8d2b24a7e2f2487f [formerly bb706b9fa7f06dee1ea19025b28f1be23a5fe7e5]]]
Former-commit-id: cffb86152a1dd20cb8dffaa05930b9d0391e45eb [formerly 8be674a55b95f7cc87373ac997bd29b1d625ffc0 [formerly 476acd0abc1dd9f98ea7238595d0317b10e13876]]
Former-commit-id: 0d0e337171f0dccc35ab5d7d9fa30fa46d8fea38 [formerly a8e4d369af63b760265d9a1fcb459afedc6e985f]
Former-commit-id: ad28a35e2e08b1838cb15b8da16c32b837248f3d

--- a/www/-/s/style-mobile.css
+++ b/www/-/s/style-mobile.css
@@ -3305,7 +3305,7 @@ sub, sup {
 }
 
 @media all and (min-width:720px) {
-    table.infobox {
+    table.infobox, table.sistersitebox {
         margin: 0.5em 0 1em 35px !important;
         max-width: 320px;
         width: auto !important;
